sjeng/use_undefined_identifier/c3/check_legal
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/check_legal/src/moves.c:741:8: error: use of undeclared identifier 'dword_66859C'
v42 = &dword_66859C[bking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/check_legal/src/moves.c:955:8: error: use of undeclared identifier 'dword_66859C'
v32 = &dword_66859C[wking_loc]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/check_legal/src/obj/moves.o] Error 1
